--- a/MauiLabs.View/AppShell.xaml
+++ b/MauiLabs.View/AppShell.xaml
@@ -3,12 +3,12 @@
     x:Class="MauiLabs.View.AppShell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:local="clr-namespace:MauiLabs.View.Pages"
+    xmlns:pages="clr-namespace:MauiLabs.View.Pages"
     Shell.FlyoutBehavior="Disabled">
 
     <ShellContent
-        Title="Home"
-        ContentTemplate="{DataTemplate local:MainPage}"
-        Route="MainPage" />
+        Title="Главная страница"
+        ContentTemplate="{DataTemplate pages:MainPage}"
+        Route="main" />
 
 </Shell>
