--- a/MauiLabs.View/Pages/ProfilePages/AuthorizationPage.xaml
+++ b/MauiLabs.View/Pages/ProfilePages/AuthorizationPage.xaml
@@ -5,6 +5,7 @@
              xmlns:system="clr-namespace:System;assembly=netstandard"
              xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
              x:Class="MauiLabs.View.Pages.ProfilePages.AuthorizationPage"
+             IconImageSource="/Profile/login.png"
              Title="Авторизация" Shell.BackgroundColor="{x:StaticResource Key=FirstColor}">
     <ContentPage.Resources>
         <ResourceDictionary>
