--- a/MauiLabs.View/Pages/ProfilePages/RegistrationPage.xaml
+++ b/MauiLabs.View/Pages/ProfilePages/RegistrationPage.xaml
@@ -5,6 +5,7 @@
              xmlns:system="clr-namespace:System;assembly=netstandard"
              xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
              x:Class="MauiLabs.View.Pages.ProfilePages.RegistrationPage"
+             IconImageSource="/Profile/registration.png"
              Title="Регистрация" Shell.BackgroundColor="{x:StaticResource Key=FirstColor}">
     <ContentPage.Resources>
         <ResourceDictionary>
