feat: [ver=1.05] better navigation and reg form

--- a/MauiLabs.View/Commons/ContentViews/ValidationEntryView.xaml
+++ b/MauiLabs.View/Commons/ContentViews/ValidationEntryView.xaml
@@ -40,7 +40,7 @@
                 <RoundRectangle CornerRadius="10" />
             </Border.StrokeShape>
             <Entry Placeholder="{x:Binding DefaultText}" Text="{x:Binding TextValue}" 
-                   IsEnabled="{x:Binding CanInput}"
+                   IsEnabled="{x:Binding CanInput}" IsSpellCheckEnabled="False"
                    ClearButtonVisibility="WhileEditing" x:Name="TextField" IsPassword="{x:Binding IsHidden}"
                    Style="{x:StaticResource Key=TextFieldStyle}" MaxLength="{x:Binding MaxLenght}">
                 <Entry.Behaviors>
