--- a/MauiLabs.View/Pages/ProfilePages/RegistrationPage.xaml
+++ b/MauiLabs.View/Pages/ProfilePages/RegistrationPage.xaml
@@ -28,24 +28,21 @@
     </ContentPage.Resources>
     <Grid>
         <Image Source="background.png" Aspect="AspectFill"/>
-        <!--<ScrollView IsEnabled="{Binding IsLoading, Converter={StaticResource InvertedBoolConverter}}"
-                    Orientation="Vertical" BackgroundColor="Transparent">
-
-            <StackLayout x:Name="LoginPanel" Opacity="0.0" Scale="1.5" Orientation="Vertical" HorizontalOptions="Fill" Margin="30, 50" >
-                <Label HorizontalTextAlignment="Center"
-                       TextColor="White" FontSize="26" FontAttributes="Bold" 
+        <ScrollView Orientation="Vertical" BackgroundColor="Transparent">
+            <StackLayout x:Name="RegisterPanel" Opacity="0.0" Scale="1.5" Orientation="Vertical" HorizontalOptions="Fill" Margin="30, 50" >
+                <Label HorizontalTextAlignment="Center" TextColor="White" FontSize="26" FontAttributes="Bold" 
                        HorizontalOptions="Center" WidthRequest="300">
                     <Label.FormattedText>
                         <FormattedString>
-                            <Span Text="Укажите данные для" TextColor="White"/>
+                            <Span Text="Регистрация профиля" TextColor="White"/>
                             <Span Text="{x:Static system:Environment.NewLine}"/>
-                            <Span Text="Регистрации" TextColor="{x:StaticResource FirstColor}" TextDecorations="Underline"/>
+                            <Span Text="Нового пользователя" TextColor="{x:StaticResource FirstColor}" TextDecorations="Underline"/>
                         </FormattedString>
                     </Label.FormattedText>
                 </Label>
                 <FlexLayout AlignItems="Center" HorizontalOptions="Center" Direction="Column">
-                    <Border x:Name="MainFrame" StrokeThickness="2" MaximumWidthRequest="400" Padding="30"
-                            BackgroundColor="{x:StaticResource Key=FirstColor}" HeightRequest="280" Margin="0, 30, 0, 20"
+                    <Border StrokeThickness="2" MaximumWidthRequest="400" Padding="30"
+                            BackgroundColor="{x:StaticResource Key=FirstColor}" Margin="0, 20, 0, 20"
                             FlexLayout.AlignSelf="Stretch">
                         <Border.StrokeShape>
                             <RoundRectangle CornerRadius="20" />
@@ -55,25 +52,61 @@
                         </Border.Stroke>
 
                         <VerticalStackLayout Spacing="10">
-                            <custom:ValidationEntryView 
-                                IsValidated="{x:Binding IsLoginValid}" TextValue="{x:Binding UserLogin}"
-                                MaxLenght="50" MinLenght="5" ErrorText="Значение от 5 до 50 символов"
-                                DefaultText="Укажите логин" LabelText="Логин:"/>
+                            <custom:ValidationEntryView x:Name="LoginTextField" ErrorText="Значение от 5 до 50 символов"
+                                    IsValidated="{x:Binding ValidationState[Login]}" TextValue="{x:Binding UserLogin}"
+                                    CanInput="{Binding IsLoading, Converter={StaticResource InvertedBoolConverter}}"
+                                    DefaultText="Укажите логин" LabelText="Логин:" />
 
-                            <custom:ValidationEntryView 
-                                IsValidated="{x:Binding IsPasswordValid}" TextValue="{x:Binding UserPassword}"
-                                MaxLenght="50" MinLenght="5" ErrorText="Значение от 5 до 50 символов"
-                                DefaultText="Укажите пароль" LabelText="Пароль:" IsHidden="True"/>
+                            <custom:ValidationEntryView x:Name="PasswordTextField" ErrorText="Значение от 5 до 50 символов"
+                                    IsValidated="{x:Binding ValidationState[Password]}" TextValue="{x:Binding UserPassword}"
+                                    CanInput="{Binding IsLoading, Converter={StaticResource InvertedBoolConverter}}"
+                                    DefaultText="Укажите пароль" LabelText="Пароль:" IsHidden="True"/>
+                        </VerticalStackLayout>
+
+                    </Border>
+                    <Border StrokeThickness="2" MaximumWidthRequest="400" Padding="30"
+                            BackgroundColor="{x:StaticResource Key=FirstColor}" Margin="0, 0, 0, 20"
+                            FlexLayout.AlignSelf="Stretch">
+                        <Border.StrokeShape>
+                            <RoundRectangle CornerRadius="20" />
+                        </Border.StrokeShape>
+                        <Border.Stroke>
+                            <SolidColorBrush Color="White" />
+                        </Border.Stroke>
+
+                        <VerticalStackLayout Spacing="10">
+                            <custom:ValidationEntryView x:Name="NameTextField" ErrorText="Значение от 4 до 50 символов"
+                                    IsValidated="{x:Binding ValidationState[UserName]}" TextValue="{x:Binding UserName}"
+                                    CanInput="{Binding IsLoading, Converter={StaticResource InvertedBoolConverter}}"
+                                    MinLenght="4" DefaultText="Укажите имя" LabelText="Имя пользователя:" />
+
+                            <custom:ValidationEntryView x:Name="SurnameTextField" ErrorText="Значение от 4 до 50 символов"
+                                    IsValidated="{x:Binding ValidationState[Surname]}" TextValue="{x:Binding UserSurname}"
+                                    CanInput="{Binding IsLoading, Converter={StaticResource InvertedBoolConverter}}"
+                                    MinLenght="4" DefaultText="Укажите фамилию" LabelText="Фамилия пользователя:" />
+
+                            <custom:ValidationEntryView x:Name="EmailTextField" ErrorText="Значение от 5 до 100 символов"
+                                    IsValidated="{x:Binding ValidationState[Email]}" TextValue="{x:Binding UserEmail}"
+                                    CanInput="{Binding IsLoading, Converter={StaticResource InvertedBoolConverter}}"
+                                    MaxLenght="100" Regex="^([\w\.\-]{4,})@([\w\-]+)((\.(\w){2,3})+)$"
+                                    DefaultText="Пример: test@gmail.com" LabelText="Электронная почта:" />
+                            <custom:ExpanderView ButtonIcon="arrowicon.png">
+                                <custom:ExpanderView.Item>
+                                    <StackLayout>
+                                        <Label Text="Test"/>
+                                    </StackLayout>
+                                </custom:ExpanderView.Item>
+                                
+                            </custom:ExpanderView>
                         </VerticalStackLayout>
                     </Border>
-                    <Button 
-                        Style="{x:StaticResource Key=ButtonStyle}" 
-                        FlexLayout.AlignSelf="Stretch" x:Name="LoginButton"
-                        Text="Войти в профиль" HeightRequest="60" MaximumWidthRequest="400"
-                        Command="{Binding AuthorizateCommand}"/>
+                    <Button x:Name="RegisterButton" Clicked="RegisterButton_Clicked"
+                            FlexLayout.AlignSelf="Stretch" Text="Зарегистрироваться" HeightRequest="60" MaximumWidthRequest="400"
+                            Style="{x:StaticResource Key=ButtonStyle}" Command="{Binding RegistrationCommand}"
+                            IsEnabled="{Binding IsLoading, Converter={StaticResource InvertedBoolConverter}}"/>
                 </FlexLayout>
             </StackLayout>
         </ScrollView>
-        <custom:LoadingContentView IsLoading="{x:Binding IsLoading}" CancelCommand="{x:Binding CancelCommand}"/>-->
+        <custom:LoadingContentView IsLoading="{x:Binding IsLoading}" CancelCommand="{x:Binding CancelCommand}"/>
     </Grid>
 </ContentPage>
